HS: Added code sample functionality + fixed a bug Embed https://pikapower9080.github.io/html-sandbox/embed?code=your\ncode\there To create an interactive code sample for your tutorial. How cool is that Also fixed a bug where the code input would overlap the buttons

--- a/tools/html-sandbox/styles.css
+++ b/tools/html-sandbox/styles.css
@@ -23,7 +23,7 @@ body{
 #codeinput, #highlighted{
     border: 0;
     width: 55%;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 130px);
     overflow: auto;
     white-space: nowrap;
     margin: 10px;
@@ -46,7 +46,7 @@ body{
     border-radius: 4px;
     background-color: var(--secondary-background-color);
     width: 38%;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 130px);
     position: absolute;
     right: 0;
     color: white;
